[gd_scene load_steps=2 format=3 uid="uid://d2craft456"]

[ext_resource type="Script" path="res://scenes/ui/screens/CraftingScreen.gd" id="1_crafting"]

[node name="CraftingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crafting")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚öóÔ∏è √úretim At√∂lyesi"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="CategoryTabs" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AlchemyButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "‚öóÔ∏è Simya"
theme_override_font_sizes/font_size = 24

[node name="BlacksmithButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "‚öíÔ∏è Demircilik"
theme_override_font_sizes/font_size = 24

[node name="WoodworkButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "ü™µ Marangoz"
theme_override_font_sizes/font_size = 24

[node name="LeatherworkButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "ü¶å Deri ƒ∞≈üleme"
theme_override_font_sizes/font_size = 24

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeList" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="RecipePanel" type="PanelContainer" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/RecipePanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RecipeName" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Tarif Se√ßiniz"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/RecipePanel/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/RecipePanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeftVBox" type="VBoxContainer" parent="MarginContainer/VBox/RecipePanel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox/HBox/LeftVBox"]
layout_mode = 2
text = "Gerekli Malzemeler"
theme_override_font_sizes/font_size = 24

[node name="MaterialsList" type="VBoxContainer" parent="MarginContainer/VBox/RecipePanel/VBox/HBox/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="RightVBox" type="VBoxContainer" parent="MarginContainer/VBox/RecipePanel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox/HBox/RightVBox"]
layout_mode = 2
text = "√úr√ºn Bilgisi"
theme_override_font_sizes/font_size = 24

[node name="ProductInfo" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox/HBox/RightVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Miktar: 1x
S√ºre: 30 dk"
theme_override_font_sizes/font_size = 20

[node name="TimeLabel" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "√úretim S√ºresi: 30 dakika"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
horizontal_alignment = 1

[node name="QuantityHBox" type="HBoxContainer" parent="MarginContainer/VBox/RecipePanel/VBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox/QuantityHBox"]
layout_mode = 2
text = "Miktar:"
theme_override_font_sizes/font_size = 24

[node name="DecreaseButton" type="Button" parent="MarginContainer/VBox/RecipePanel/VBox/QuantityHBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "-"
theme_override_font_sizes/font_size = 32

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBox/RecipePanel/VBox/QuantityHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="IncreaseButton" type="Button" parent="MarginContainer/VBox/RecipePanel/VBox/QuantityHBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "+"
theme_override_font_sizes/font_size = 32

[node name="CraftButton" type="Button" parent="MarginContainer/VBox/RecipePanel/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "‚öóÔ∏è √úRET"
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
